# Bella

./: .env.example  .gitignore  README.md  pyproject.toml
config/bfcl_v4/: categories.yaml
datasets/bfcl/: categories.yaml
datasets/bfcl/prompts/multiple/: system.txt
datasets/bfcl/prompts/simple_python/: system.txt  user_template.txt
experiments/memory_baseline_20250319/backup_outputs/score_20260321_120607/: data_agentic.csv  data_format_sensitivity.csv  data_live.csv  data_multi_turn.csv  data_non_live.csv  data_overall.csv
experiments/memory_baseline_20250319/stash/: ah_result.jsonl  ah_score.json  none_score.json  trm_result.jsonl  trm_score.json  trmv2_result.jsonl  trmv2_score.json
prompts/bfcl_v4/multi_turn_base/: system.txt  user_template.txt
prompts/bfcl_v4/multiple/: user_template.txt
scripts/: mirror_bfcl_resources.py  run_bfcl_eval.py  run_bfcl_infer.py  run_bfcl_multi_turn_memories.sh  run_demo.py  run_full_eval.py
src/bella/: bfcl_resources.py  config.py
src/bella/benchmarks/: __init__.py  base.py
src/bella/benchmarks/bfcl/: __init__.py  compat.py  resources.py
src/bella/benchmarks/locomo/: __init__.py  adapter.py  evaluation.py
src/bella/env/: base.py  bfcl_multi_turn.py  tool_executor.py
src/bella/eval/: bfcl_eval.py  runner.py
src/bella/infer/: bfcl_formatter.py  bfcl_parser.py  bfcl_runner.py  openai_client.py  runner.py  types.py  writer.py
src/bella/infer/adapters/: __init__.py  base.py  common.py  multi_turn_base.py  multiple.py  simple_python.py
src/bella/memory/: __init__.py  base.py  observation.py  registry.py
src/bella/memory/long_term/: __init__.py  mem0.py
src/bella/memory/plugins/: __init__.py  action_history.py  mem0_memory.py  tool_result_memory.py  tool_result_memory_v2.py
src/bella/memory/short_term/: __init__.py  action_history.py  tool_result_memory.py  (+1 more)
src/bella/utils/: bfcl_compat.py
(+14 files in other folders)
