[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bella"]

[project]
name = "bella"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "openai>=1.0.0",
    "bfcl-eval==2025.10.27.1",
    "soundfile>=0.13.1",
    "pyyaml>=6.0",
]

[project.scripts]
bella-run = "bella.infer.runner:main"
bella-eval = "bella.eval.runner:main"
bella-demo = "scripts.run_demo:main"
bella-full-eval = "scripts.run_full_eval:main"
# Legacy aliases
bella-run-bfcl-infer = "bella.infer.runner:main"
bella-run-bfcl-eval = "bella.eval.runner:main"
bella-run-bfcl-demo = "scripts.run_demo:main"
